# SCREENREC-KIRO

./: TASK_11_COMPLETION_SUMMARY.md  TASK_12_COMPLETION_SUMMARY.md  TASK_13_COMPLETION_SUMMARY.md  TASK_14_COMPLETION_SUMMARY.md  TASK_15_COMPLETION_SUMMARY.md  TASK_16_COMPLETION_SUMMARY.md  TASK_17_COMPLETION_SUMMARY.md  TASK_18_COMPLETION_SUMMARY.md  TASK_19_COMPLETION_SUMMARY.md  TASK_20_COMPLETION_SUMMARY.md  TASK_21_COMPLETION_SUMMARY.md  TASK_22_COMPLETION_SUMMARY.md  TASK_23_COMPLETION_SUMMARY.md  TASK_24_COMPLETION_SUMMARY.md  TASK_25_COMPLETION_SUMMARY.md  TASK_26_COMPLETION_SUMMARY.md  TASK_27_COMPLETION_SUMMARY.md  TASK_28_COMPLETION_SUMMARY.md  TASK_29_COMPLETION_SUMMARY.md  TASK_30_COMPLETION_SUMMARY.md  TASK_31_COMPLETION_SUMMARY.md  TASK_32_COMPLETION_SUMMARY.md  TASK_33_COMPLETION_SUMMARY.md  TASK_34_COMPLETION_SUMMARY.md
AlwaysOnAICompanion/: .gitignore  DEPLOYMENT.md  IntegrationTests.xctestplan  Makefile  Package.swift  README.md  TESSERACT_FALLBACK_IMPLEMENTATION.md  validate_allowlist_system.swift  validate_browser_parsing.swift  validate_comprehensive_integration.swift  validate_deployment_system.swift  validate_documentation_system.swift  validate_evidence_linking.swift  validate_hotkey_privacy_system.swift  validate_menu_bar_app.swift  validate_monitoring_system.swift  validate_pii_masking.swift  validate_plugin_system.swift  validate_productivity_parsing.swift  validate_report_generation.swift  validate_settings_functionality.swift  validate_settings_interface.swift  validate_summarization.swift  validate_terminal_parsing.swift
AlwaysOnAICompanion/AlwaysOnAICompanion.xcodeproj/: project.pbxproj
AlwaysOnAICompanion/Documentation/: DEVELOPER_GUIDE.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md  VIDEO_TUTORIALS.md
keyframe-indexer/: .gitignore  Cargo.toml  Makefile  README.md  SCENE_DETECTION_IMPLEMENTATION.md  TASK_8_COMPLETION_SUMMARY.md  config.json  install-rust.sh  setup.sh  validate-project.sh  validate_scene_detection  validate_scene_detection.rs
keyframe-indexer/src/: config.rs  csv_test.rs  csv_writer.rs  cursor_tracker.rs  delta_analyzer.rs  encryption.rs  error.rs  error_modal_detector.rs  error_modal_tests.rs  event_correlator.rs  event_detection_tests.rs  event_detector.rs  event_parquet_writer.rs  file_watcher.rs  integration_test.rs  keyframe_extractor.rs  lib.rs  main.rs  metadata_collector.rs  navigation_detector.rs  navigation_integration.rs  navigation_integration_tests.rs  ocr_data.rs  ocr_parquet_tests.rs  ocr_parquet_writer.rs  parquet_test.rs  parquet_writer.rs  scene_detector.rs  scene_detector_standalone_test.rs  simple_event_test.rs
keyframe-indexer/tests/: integration_tests.rs
(+134 files in other folders)
