[package]
name = "keyframe-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "7.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
notify = "6.0"
arrow = "52.0"
parquet = "52.0"
image = "0.24"
imageproc = "0.23"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"
test-case = "3.0"

[[bin]]
name = "indexer"
path = "src/main.rs"

[[bin]]
name = "test_scene_detection"
path = "src/bin/test_scene_detection.rs"