[package]
name = "keyframe-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = { version = "7.0", optional = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
notify = "6.0"
csv = "1.3"
image = "0.24"
imageproc = "0.23"
sha2 = "0.10"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
# Parquet dependencies for OCR data storage
arrow = "53.0"
parquet = "53.0"
datafusion = "42.0"
# Regex for pattern matching
regex = "1.0"
# Encryption dependencies
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
bincode = "1.3"

[features]
default = ["ffmpeg"]
ffmpeg = ["ffmpeg-next"]

[dev-dependencies]
tempfile = "3.0"
test-case = "3.0"

[[bin]]
name = "indexer"
path = "src/main.rs"

[[bin]]
name = "test_scene_detection"
path = "src/bin/test_scene_detection.rs"

[[bin]]
name = "test_parquet"
path = "src/bin/test_parquet.rs"

[[bin]]
name = "test_ocr_parquet"
path = "src/bin/test_ocr_parquet.rs"

[[bin]]
name = "test_event_detection"
path = "src/bin/test_event_detection.rs"

[[bin]]
name = "integration_test"
path = "src/bin/integration_test.rs"

[[bin]]
name = "test_navigation_detection"
path = "src/bin/test_navigation_detection.rs"

[[bin]]
name = "test_error_modal_detection"
path = "src/bin/test_error_modal_detection.rs"

[[bin]]
name = "simple_error_modal_test"
path = "src/bin/simple_error_modal_test.rs"

[[bin]]
name = "test_event_storage"
path = "src/bin/test_event_storage.rs"

[[bin]]
name = "simple_event_test"
path = "src/bin/simple_event_test.rs"

[[bin]]
name = "test_encryption"
path = "src/bin/test_encryption.rs"